# zinq

./: .gitignore  Cargo.toml  README.md
docs/: Architecture.md
examples/: ctrl_flow_trace.rs  sail_linux_boot.rs
src/: lib.rs
zinq/: Cargo.toml
zinq_std/arch/arm/: Cargo.toml  README.md  expanded.rs
zinq_std/arch/arm/src/: insns.rs  lib.rs  variants.rs
zinq_std/arch/arm/src/insns/: a64.rs  disas.rs  mod.rs
zinq_std/arch/arm/src/insns/a64/: branch.rs  mem.rs  mod.rs
zinq_std/arch/arm/src/insns/a64/branch/: cond.rs  cond_cmp.rs  cond_test.rs  uncond_imm.rs  uncond_reg.rs
zinq_std/arch/arm/src/insns/a64/branch_exc_sys/: branch_conditional_cond.rs  branch_unconditional_immediate.rs  branch_unconditional_register.rs  system_hints.rs  system_register_system.rs
zinq_std/arch/arm/src/insns/a64/data/: arith_carry.rs  arith_imm.rs  arith_shift.rs  mod.rs  mov_imm.rs
zinq_std/arch/arm/src/insns/a64/data_proc/imm/: arithmetic.rs  logical.rs  pc_rel.rs
zinq_std/arch/arm/src/insns/a64/data_proc/reg/: arithmetic_shift.rs
zinq_std/arch/arm/src/insns/a64/ldst/: ldst_reg.rs
zinq_std/arch/arm/src/insns/a64/load_store/: memory_literal_general.rs  memory_pair_general_post_idx.rs  memory_single_general_immediate_signed_post_index.rs
zinq_std/arch/arm/src/insns/helpers/: common.rs  enums.rs  extend_reg.rs  integer.rs  registers.rs  system.rs
zinq_std/arch/arm/tests/: a64.rs
znstd/arch/arm/: Cargo.toml
znstd/arch/arm/src/: lib.rs
znstd/arch/arm/src/insns/: mod.rs
znstd/arch/arm/src/insns/a64/: branch.rs  data.rs  mod.rs
znstd/arch/arm/tests/: hello_arm.rs
(+101 files in other folders)
